Fix/bbnavbar alignment and styling issues (#83)
* Refactor navbar styles and add max width

- Refactored the navbar styles to improve alignment and vertical centering of items
- Added a max width property to the navbar to limit its width similar to the page content

Add divider between brand and items

- Added a divider between the brand and items in the navbar

Add tooltip functionality

- Added a new component, BBToolTip, to provide tooltip functionality

Fix padding issue on Bitwarden alert

- Resolved a padding issue related to the positioning and size variable of the Bitwarden alert

Fix centering issue on mobile

- Fixed an issue with centering on mobile devices

* todo

* Refactor BBNavbar component styles: Adjust brand container alignment and styling

* todo

* eslint

* Refactor BBNavbar component styles: Adjust content margin and add margin to hamburger icon

* Refactor BBNavbar component: Remove unused useEffect import

--- a/src/bbnavbar/styles.module.scss
+++ b/src/bbnavbar/styles.module.scss
@@ -95,27 +95,34 @@ $navbar-vertical-width: var(--navbar-vertical-width, 10rem);
   }
 }
 
+.containerBrand {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center; // Ensure text is centered
+  width: 100%;
+  height: 100%;
+  padding: 0.25rem;
+}
+
 .brand {
-  cursor: pointer;
-  border-radius: $border-radius;
-  padding: $brand-padding;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: $container-brand-margin;
+  width: $container-brand-width;
+
+  cursor: pointer;
+  border-radius: $border-radius;
+  padding: $brand-padding;
+  height: 100%;
 
   &:hover {
     background-color: color-mix(in srgb, $background-color, #fff 20%);
   }
-}
-
-.containerBrand {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: $container-brand-margin;
-  width: $container-brand-width;
 }
 
 .textTitle {
@@ -192,6 +199,7 @@ $navbar-vertical-width: var(--navbar-vertical-width, 10rem);
   background-color: transparent;
   transition: background-color 0.2s ease-in-out;
   display: none;
+  margin: 0 0.75rem;
 }
 
 .iconHamburger {
